Revision history for HTML-D3 - Visualise various charts using D3

0.03
	Added line chart support

0.02	Mon Jan  6 10:13:11 EST 2025
	Fix CI breakage

0.01	Mon Jan  6 09:47:22 EST 2025
        First draft - POC: generates bar charts only