@@ -2,6 +2,7 @@ Revision history for HTML-D3 - Visualise various charts using D3
 
 0.03
 	Added line chart support
+	Use JSON::MaybeXS instead of JSON
 
 0.02	Mon Jan  6 10:13:11 EST 2025
 	Fix CI breakage
